--- a/frontend/main.css
+++ b/frontend/main.css
@@ -1,3 +1,23 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    display: flex;
+    justify-content: center;
+}
+.form{
+    display: flex;
+    margin-top: 10%;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 70vw;
+}
+.form-field{
+    margin-top: 20px;
+    display: flex;
+    width: 33%;
+}
 .form-label::after {
     content: ":";
 }
