--- a/frontend/main.css
+++ b/frontend/main.css
@@ -2,7 +2,15 @@
     margin: 0;
     padding: 0;
 }
+html{
+    background: #0e3b43;
+}
 body{
+    display: flex;
+    justify-content: center;
+}
+.full-width{
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -14,13 +22,18 @@ body{
     flex-wrap: wrap;
     width: 50vw;
     height: 40vh;
-    border: 1px solid #ccc;
+    background: #a3bbad;
+    border-radius: 5px;
+    box-shadow: 5px 10px 5px rgba(0.5,10,10,10);
 }
 .form-field{
     margin-top: 20px;
     display: flex;
     width: 35%;
     margin-right: 40px;
+}
+.form-label{
+    letter-spacing: 1px;
 }
 .form-label::after {
     content: ":";
@@ -29,5 +42,20 @@ body{
 .form-input{
     width: 100%;
     border: none;
+    background: none;
     border-bottom: 1px solid black;
+}
+
+.form-button{
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    letter-spacing: 1px;
+    background: white;
+    transition: background 0.3s ease;
+}
+
+.form-button:hover{
+    background: rgb(194, 194, 194);
 }
